Updates from Overleaf

--- a/Latex/DD_Chapters/1introduction.tex
+++ b/Latex/DD_Chapters/1introduction.tex
@@ -75,7 +75,7 @@ The acronyms shared between this document and the RASD document are reported in 
 \begin{tabular}{|c|c|}
         \hline
         \textbf{Acronyms} & \textbf{Definition} \\ \hline
-        RASD \& Requirements Analysis \& Specification Document\\ \hline
+        RASD & Requirements Analysis \& Specification Document\\ \hline
         CV & Curriculum vitae\\ \hline
     \end{tabular}
     \caption{RASD Acronyms}
@@ -115,7 +115,7 @@ The abbreviations shared between this document and the RASD document are reporte
     \label{tab:abbreviations}
 \end{table}
 \subsection{Revision History}
-\begin{table}[h]
+\begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|}
         \hline
