--- a/Latex/DD_Chapters/3user_interface_design.tex
+++ b/Latex/DD_Chapters/3user_interface_design.tex
@@ -3,47 +3,47 @@ The SPA web interface allows a wide number of interaction without the need of re
 In the Contacts page, the user can find useful links to get in touch with S\&C.\\
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/HomePage.png}
-    \caption{UI Home Page: as an example, UI cards containing some user scenarios described in the \ref{subsec: user scenarios}  are shown}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v1/HomePage.png}
+    \caption{UI Home Page: as an example, UI cards containing some user scenarios are shown}
     \label{fig:homepage}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Contacts.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Contacts.png}
     \caption{UI Contacts Page}
     \label{fig:contactpage}
 \end{figure}
 \noindent Thanks to the app bar link buttons, users can also reach the Sign-Up and Sign-in pages. The Sign-Up page allows for different types of sign-up according to the new user type. This allows the user to provide the platform with the correct information.
 \begin{figure}[H]
-    \includegraphics[width=0.33\textwidth]{Latex/Images/New Ui/SignUp Student.png}
-    \includegraphics[width=0.33\textwidth]{Latex/Images/New Ui/SignUp Company.png}
-    \includegraphics[width=0.33\textwidth]{Latex/Images/New Ui/SignUp University.png}
+    \includegraphics[width=0.33\textwidth]{Latex/Images/UI/v2/SignUp Student.png}
+    \includegraphics[width=0.33\textwidth]{Latex/Images/UI/v2/SignUp Company.png}
+    \includegraphics[width=0.33\textwidth]{Latex/Images/UI/v2/SignUp University.png}
     \caption{UI Sign-Up Page}
     \label{fig:signuppage}
 \end{figure}
 To be able to log into the platform, the user shall provide his email and password. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/SignInPage.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/SignInPage.png}
     \caption{UI Sign-In Page}
     \label{fig:signinpage}
 \end{figure}
 \noindent The Dashboard page will be the central hub for logged-in users. From the left-hand panel of the dashboard, all the pages associated with the core functionalities of the platform are reachable. Therefore, this page is provided after a successful log-in. The side panel contains different elements according to the user needs.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Company-Dashboard.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Company-Dashboard.png}
     \caption{UI Company Dashboard Page}
     \label{fig:companyDashboard}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Student-Dashboard.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Student-Dashboard.png}
     \caption{UI Students Dashboard Page}
     \label{fig:studentDashboard}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Uni-Dashboard.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Uni-Dashboard.png}
     \caption{UI University Dashboard Page}
     \label{fig:universityDashboard}
 \end{figure}
