--- a/Latex/RASD_Chapters/alloy.tex
+++ b/Latex/RASD_Chapters/alloy.tex
@@ -24,37 +24,37 @@ The parameters for the run command were chosen to produce a clear and readable m
 
 \begin{figure}[H]
     \hspace{-2.5cm}
-    \includegraphics[width=1.3\linewidth]{Latex/Images/Alloy/0.png}
+    \includegraphics[width=1.3\linewidth]{Latex/Images/RASD/Alloy/0.png}
     \caption*{\textbf{Step 0:} All Recommendations and Spontaneous Applications have been sent but have not yet been evaluated. \textit{Student0} has not uploaded a CV yet, so he cannot be matched with any InternshipOffer}
     \label{fig:ALIMG0}
 \end{figure}
 \begin{figure}[H]
     \hspace{-2.5cm}
-    \includegraphics[width=1.3\linewidth]{Latex/Images/Alloy/1.png}
+    \includegraphics[width=1.3\linewidth]{Latex/Images/RASD/Alloy/1.png}
     \caption*{\textbf{Step 1:} A Spontaneous Application (\textit{SpontanousApplication1}) has been accepted and a Interview  (\textit{Interview0}) has been created}
     \label{fig:ALIMG1}
 \end{figure}
 \begin{figure}[H]
     \hspace{-2.5cm}
-    \includegraphics[width=1.3\linewidth]{Latex/Images/Alloy/2.png}
+    \includegraphics[width=1.3\linewidth]{Latex/Images/RASD/Alloy/2.png}
     \caption*{\textbf{Step 2:} A Recommendation (\textit{Recommendation1}) has been rejected by one of the party}
     \label{fig:ALIMG2}
 \end{figure}
 \begin{figure}[H]
     \hspace{-2.5cm}
-    \includegraphics[width=1.3\linewidth]{Latex/Images/Alloy/3.png}
+    \includegraphics[width=1.3\linewidth]{Latex/Images/RASD/Alloy/3.png}
     \caption*{\textbf{Step 3:} The other Spontaneous Application (\textit{SpontanousApplication0}) has been rejected, while \textit{Interview0} has been sent. The two remaining Recommendations have been accepted by the remaining party}
     \label{fig:ALIMG3}
 \end{figure}
 \begin{figure}[H]
     \hspace{-2.5cm}
-    \includegraphics[width=1.3\linewidth]{Latex/Images/Alloy/4.png}
+    \includegraphics[width=1.3\linewidth]{Latex/Images/RASD/Alloy/4.png}
     \caption*{\textbf{Step 4:} \textit{Interview0} of \textit{Student2} was unsucesfull but Interview (\textit{Interview1}) is sent to him for another Recommendation}
     \label{fig:ALIMG4}
 \end{figure}
 \begin{figure}[H]
     \hspace{-2.5cm}
-    \includegraphics[width=1.3\linewidth]{Latex/Images/Alloy/5.png}
+    \includegraphics[width=1.3\linewidth]{Latex/Images/RASD/Alloy/5.png}
     \caption*{\textbf{Step 5:} \textit{Interview1} has been passed by \textit{Student2}, while \textit{Company1} has sent him the remaining Interview}
     \label{fig:ALIMG5}
 \end{figure}
