--- a/Latex/RASD_Chapters/requirements.tex
+++ b/Latex/RASD_Chapters/requirements.tex
@@ -5,47 +5,47 @@ The user interface will be designed to improve intuitiveness and simplicity. The
 In the Contacts page, the user can find useful links to get in touch with S\&C.\\
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/HomePage.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v1/HomePage.png}
     \caption{UI Home Page: as an example, UI cards containing some user scenarios described in the \ref{subsec: user scenarios}  are shown}
     \label{fig:homepage}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Contacts.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Contacts.png}
     \caption{UI Contacts Page}
     \label{fig:contactpage}
 \end{figure}
 \noindent Thanks to the app bar link buttons, users can also reach the Sign-Up and Sign-in pages. The Sign-Up page allows for different types of sign-up according to the new user type. This allows the user to provide the platform with the correct information.
 \begin{figure}[H]
-    \includegraphics[width=0.33\textwidth]{Latex/Images/New Ui/SignUp Student.png}
-    \includegraphics[width=0.33\textwidth]{Latex/Images/New Ui/SignUp Company.png}
-    \includegraphics[width=0.33\textwidth]{Latex/Images/New Ui/SignUp University.png}
+    \includegraphics[width=0.33\textwidth]{Latex/Images/UI/v2/SignUp Student.png}
+    \includegraphics[width=0.33\textwidth]{Latex/Images/UI/v2/SignUp Company.png}
+    \includegraphics[width=0.33\textwidth]{Latex/Images/UI/v2/SignUp University.png}
     \caption{UI Sign-Up Page}
     \label{fig:signuppage}
 \end{figure}
 To be able to log into the platform, the user shall provide his email and password. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/SignInPage.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/SignInPage.png}
     \caption{UI Sign-In Page}
     \label{fig:signinpage}
 \end{figure}
 \noindent The Dashboard page will be the central hub for logged-in users. From the left-hand panel of the dashboard, all the pages associated with the core functionalities of the platform are reachable. Therefore, this page is provided after a successful log-in. The side panel contains different elements according to the user needs.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Company-Dashboard.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Company-Dashboard.png}
     \caption{UI Company Dashboard Page}
     \label{fig:companyDashboard}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Student-Dashboard.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Student-Dashboard.png}
     \caption{UI Students Dashboard Page}
     \label{fig:studentDashboard}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/New Ui/Uni-Dashboard.png}
+    \includegraphics[width=\textwidth]{Latex/Images/UI/v2/Uni-Dashboard.png}
     \caption{UI University Dashboard Page}
     \label{fig:universityDashboard}
 \end{figure}
@@ -66,7 +66,7 @@ Use Case Diagrams, detailed Use Case Descriptions, Sequence Diagrams and Require
 \subsubsection{Use Case Diagrams}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1 \textwidth]{Diagrams/UseDiagrams/UserRegistrationUseCase.png}
+    \includegraphics[width=1 \textwidth]{Latex/Images/RASD/UseCases/UserRegistrationUseCase.png}
     \caption{User Registration Use Case Diagram}
     \label{fig:UserRegistrationUseCaseDiagram}
 \end{figure}
@@ -74,7 +74,7 @@ This diagram illustrates the User Registration and Login process, for all Users.
 \clearpage.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1 \textwidth]{Diagrams/UseDiagrams/Student Company Use Case.png}
+    \includegraphics[width=1 \textwidth]{Latex/Images/RASD/UseCases/StudentCompanyUseCase.png}
     \caption{Student and Company Use Case Diagram}
     \label{fig:StudentCompanyUseCaseDiagram}
 \end{figure}
@@ -83,7 +83,7 @@ This diagram both shows the different use cases that are specific to Students or
 \clearpage
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1 \textwidth]{Diagrams/UseDiagrams/UniversityUseCaseDiagram.png}
+    \includegraphics[width=1 \textwidth]{Latex/Images/RASD/UseCases/UniversityUseCaseDiagram.png}
     \caption{University and Complaint Use Case Diagram}
     \label{fig:UniveristyUseCaseDiagram}
 \end{figure}
@@ -587,7 +587,7 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{Latex/Images/StudentSignUpSequenceDiagram.png}
+    \includegraphics[width=0.75\textwidth]{Latex/Images/RASD/SequenceDiagrams/StudentSignUpSequenceDiagram.png}
     \caption{[SD1]: Student sign-up Sequence Diagram}
     \label{fig:SD1}
 \end{figure}
@@ -595,7 +595,7 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Latex/Images/CompanySignUpSequenceDiagram.png}
+    \includegraphics[width=0.8\textwidth]{Latex/Images/RASD/SequenceDiagrams/CompanySignUpSequenceDiagram.png}
     \caption{[SD2]: Company sign-up Sequence Diagram}
     \label{fig:SD2}
 \end{figure}
@@ -603,7 +603,7 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Latex/Images/UniversitySignUpSequenceDiagram.png}
+    \includegraphics[width=0.8\textwidth]{Latex/Images/RASD/SequenceDiagrams/UniversitySignUpSequenceDiagram.png}
     \caption{[SD3]: University sign-up Sequence Diagram}
     \label{fig:SD3}
 \end{figure}
@@ -611,7 +611,7 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.6\textwidth]{Latex/Images/UserSignInSequenceDiagram.png}
+    \includegraphics[width=0.6\textwidth]{Latex/Images/RASD/SequenceDiagrams/UserSignInSequenceDiagram.png}
     \caption{[SD4]: User sign-in Sequence Diagram}
     \label{fig:SD4}
 \end{figure}
@@ -619,7 +619,7 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Latex/Images/LoadCurriculumSequenceDiagram.png}
+    \includegraphics[width=0.8\textwidth]{Latex/Images/RASD/SequenceDiagrams/LoadCurriculumSequenceDiagram.png}
     \caption{[SD5]: Load Curriculum Sequence Diagram}
     \label{fig:SD5}
 \end{figure}
@@ -627,7 +627,7 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Latex/Images/AdvertiseInternshipSequenceDiagram.png}
+    \includegraphics[width=0.8\textwidth]{Latex/Images/RASD/SequenceDiagrams/AdvertiseInternshipSequenceDiagram.png}
     \caption{[SD6]: Advertise Internship Sequence Diagram}
     \label{fig:SD6}
 \end{figure}
@@ -635,14 +635,14 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Latex/Images/SpontaneousApplicationSequenceDiagram.png}
+    \includegraphics[width=0.8\textwidth]{Latex/Images/RASD/SequenceDiagrams/SpontaneousApplicationSequenceDiagram.png}
     \caption{[SD7]: Spontaneous Application Sequence Diagram}
     \label{fig:SD7}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Latex/Images/AcceptMatchSequenceDiagram.png}
+    \includegraphics[width=0.8\textwidth]{Latex/Images/RASD/SequenceDiagrams/AcceptMatchSequenceDiagram.png}
     \caption{[SD8]: Accept Match Sequence Diagram}
     \label{fig:SD8}
 \end{figure}
@@ -650,14 +650,14 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.55\textwidth]{Latex/Images/FeedbackMechanismSequenceDiagram.png}
+    \includegraphics[width=0.55\textwidth]{Latex/Images/RASD/SequenceDiagrams/FeedbackMechanismSequenceDiagram.png}
     \caption{[SD9]: Feedback mechanism Sequence Diagram}
     \label{fig:SD9}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Latex/Images/AssignInterviewSequenceDiagram.png}
+    \includegraphics[width=0.8\textwidth]{Latex/Images/RASD/SequenceDiagrams/AssignInterviewSequenceDiagram.png}
     \caption{[SD10]: Assign Interview Sequence Diagram}
     \label{fig:SD10}
 \end{figure}
@@ -665,28 +665,28 @@ For readability, in all diagrams except the first four, the user login process i
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\textwidth]{Latex/Images/PublishComplaintSequenceDiagram.png}
+    \includegraphics[width=1\textwidth]{Latex/Images/RASD/SequenceDiagrams/PublishComplaintSequenceDiagram.png}
     \caption{[SD11]: Publish Complaint Sequence Diagram}
     \label{fig:SD11}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.7\textwidth]{Latex/Images/RespondToComplaintSequenceDiagram.png}
+    \includegraphics[width=0.7\textwidth]{Latex/Images/RASD/SequenceDiagrams/RespondToComplaintSequenceDiagram.png}
     \caption{[SD12]: Respond to Complaint Sequence Diagram}
     \label{fig:SD12}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\textwidth]{Latex/Images/HandleComplaintSequenceDiagram.png}
+    \includegraphics[width=1\textwidth]{Latex/Images/RASD/SequenceDiagrams/HandleComplaintSequenceDiagram.png}
     \caption{[SD13]: Handle Complaint Sequence Diagram}
     \label{fig:SD13}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\textwidth]{Latex/Images/TerminateInternshipSequenceDiagram.png}
+    \includegraphics[width=1\textwidth]{Latex/Images/RASD/SequenceDiagrams/TerminateInternshipSequenceDiagram.png}
     \caption{[SD14]: Terminate Internship Sequence Diagram}
     \label{fig:SD14}
 \end{figure}
